# vdtfont

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: biohazard_600px.rs  e_300px.rs  from_font.rs  iota_60px.rs  raster.rs  simple.rs  w_16px.rs
examples/from_font/: example.rs  main.rs  outliner.rs
src/: canvas.rs  lib.rs  linked_list.rs  list.rs  main.rs  point.rs
src/delaunay/: bounds.rs  edge.rs  factory.rs  mod.rs  polygon.rs  triangle.rs  triangle_fan.rs  util.rs
src/font/: curve.rs  glyph.rs  mod.rs  outliner.rs
src/kernels/: delaunay.cl  voronoi.cl
src/math/: curve.rs  float.rs  line.rs  mod.rs  point.rs  primitives.rs
src/opencl/: buffer.rs  image_view.rs  mod.rs
src/opencl/kernels/: delaunay.cl
src/text/: curve.rs  mod.rs  outliner.rs
src/voronoi/: factory.rs  mod.rs  pixel.rs  swapchain.rs
tests/: font.rs
tests/common/: mod.rs
vdt/: Cargo.toml
vdt/src/: lib.rs  list.rs  main.rs
vdt/src/delaunay/: factory.rs  mod.rs  point.rs  triangle.rs
vdt/src/kernels/: delaunay.cl
vdt/src/opencl/: buffer.rs  image_view.rs  mod.rs
vdt/src/voronoi/: factory.rs  mod.rs  pixel.rs  site.rs  swapchain.rs
