[package]
name = "vdtfont"
version = "0.3"
edition = "2021"
authors = ["Alexander Vedekhin"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2", optional = true }

[dev-dependencies]
image = { version = "0.24" }
owned_ttf_parser = { version = "0.18.0" }

[features]
no_std = ["dep:libm"]