[package]
name = "vdtfont"
version = "0.3.2"
edition = "2021"
description = "A library for converting glyphs into triangulations"
authors = ["Alexander Vedekhin"]
repository = "https://github.com/alexanderved/vdtfont"
keywords = ["voronoi", "delaunay", "triangulation", "font", "glyph"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19"
anyhow = "1.0"
rand = "0.8"
image = "0.24"
arena_system = { version = "0.0.20", git = "https://github.com/alexanderved/arena_system" }
smallvec = "1.10.0"
owned_ttf_parser = "0.18"
libm = "0.2.6"
